--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.0.0",
     "husky": "^9.1.7",
+    "typescript": "^5.8.3",
     "vite": "^5.2.0"
   }
 }
