--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/blocks-react-renderer": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
